--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script_v1_0_1.js"></script>
 </body>
 </html>
