--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-v1_0_1.css">
 </head>
+
 <body>
     <div class="container">
-        <div  class="board" id="board">
-            
+        <div class="board" id="board">
+
         </div>
     </div>
     <script src="script_v1_0_1.js"></script>
 </body>
+
 </html>
